<resources>
    <string name="app_name">Valorant+</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_invites">Invites</string>
    <string name="aim_rating">Aim Rating</string>
    <string name="gamesense_rating">Gamesense Rating</string>
    <string name="communication_rating">Communication Rating</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_profile_picture_url">Edit Profile Picture URL</string>
    <string name="save_profile">Save Profile</string>
</resources>
