<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.valorant.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.valorant.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_teams"
        android:name="com.example.valorant.ui.teams.TeamsFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.example.valorant.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_invites"
        android:name="com.example.valorant.ui.invites.InvitesFragment"
        android:label="@string/menu_invites"
        tools:layout="@layout/fragment_invites" />

</navigation>