<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_profile_edit_username"
        app:layout_constraintStart_toEndOf="@+id/imageView_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/editText_profile_edit_username" />

    <TextView
        android:id="@+id/textView_profile_aim_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_profile_picture" />

    <RatingBar
        android:id="@+id/ratingBar_profile_aim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_aim_header" />

    <TextView
        android:id="@+id/textView_profile_gamesense_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_profile_aim" />

    <RatingBar
        android:id="@+id/ratingBar_profile_gamesense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_gamesense_header" />

    <TextView
        android:id="@+id/textView_profile_communication_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_profile_gamesense" />

    <RatingBar
        android:id="@+id/ratingBar_profile_communication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_communication_header" />

    <EditText
        android:id="@+id/editText_profile_edit_photo_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_profile_picture_url"
        android:inputType="textPersonName"
        android:textSize="12dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/imageView_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_username" />

    <EditText
        android:id="@+id/editText_profile_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_profile_picture"
        app:layout_constraintStart_toEndOf="@+id/imageView_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/imageView_profile_picture" />

    <Button
        android:id="@+id/button_profile_save_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/editText_profile_edit_username"
        app:layout_constraintStart_toEndOf="@+id/editText_profile_edit_username"
        app:layout_constraintTop_toTopOf="@+id/editText_profile_edit_username" />
</androidx.constraintlayout.widget.ConstraintLayout>